--- a/src/app/features/employee/detalle-tarea/detalle-tarea.component.html
+++ b/src/app/features/employee/detalle-tarea/detalle-tarea.component.html
@@ -9,7 +9,7 @@
                 <p class="text-gray-600 dark:text-gray-400 mt-2">Gestiona el estado y el progreso de la tarea asignada.
                 </p>
             </div>
-            <a routerLink="/mis-tareas"
+            <a routerLink="/administracion/mis-tareas"
                 class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-800 text-gray-800 dark:text-gray-200 shadow-sm hover:bg-gray-50 dark:hover:bg-gray-700"
                 title="Volver a la lista">
                 <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
