--- a/src/app/features/employee/mis-tareas/mis-tareas.component.html
+++ b/src/app/features/employee/mis-tareas/mis-tareas.component.html
@@ -161,7 +161,7 @@
                   }
                 </div>
                 
-                <a [routerLink]="['/mis-tareas', tarea.id]" 
+                <a [routerLink]="[tarea.id]" 
                    class="inline-flex items-center gap-x-1.5 py-1.5 px-3 rounded-lg text-xs font-medium bg-gray-100 text-gray-800 hover:bg-gray-200 dark:bg-gray-700 dark:text-gray-200 dark:hover:bg-gray-600 transition-colors">
                   Ver detalles
                   <svg class="shrink-0 size-3" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
